- adds landscape & portrait class - updates music issue behind the scene
Former-commit-id: 4c41a7f4aebcaa6a613fed0e13dc8d8c2f420ff1 [formerly 15f7db29b5eff2203312ba9fc978a15377eeea62 [formerly 9f63dd61de10494a2bc7cafbc77ed2a088843bf8 [formerly 07cd4ef99f9829ed492753ca99d793e2c068b27b]]]
Former-commit-id: 59741480be5822e8b657386fb5eb75fe710cc003
Former-commit-id: 98babf2d2c4a5c0e0be25406a2542fe9d0a981dd
Former-commit-id: 85eb31f3aa7cd49cc9d4cc40b3bf7a87b2869681

--- a/issues/music/assets/custom.css
+++ b/issues/music/assets/custom.css
@@ -65,12 +65,19 @@ section.issue.cover .extra-1 {
 }
 
 article.page {
-	animation-name: fade;
-	animation-duration: 0.5s;
-	animation-timing-function: ease;
-	animation-iteration-count: 1;
-	animation-direction: normal;
-	animation-delay: 0;
+  animation-name: fade;
+  animation-duration: 0.35s;
+  animation-timing-function: ease;
+  animation-delay: 0;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 0.35s;
+  -webkit-animation-timing-function: ease;
+  -webkit-animation-delay: 0;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
 }
 
 /*
